--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
   <h1>{{this.title}}</h1>
-  <img [src]="imageUrl" alt="Bridge lab logo url">
+  <img [src]="imageUrl"  (click)="onClick($event)" alt="Bridge lab logo url">
 </div>
 
 <router-outlet></router-outlet>
