--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div>
-  <h1>{{this.title}}</h1>
+  <h1>{{this.title}} {{username}}</h1>
   <img [src]="imageUrl"  (click)="onClick($event)" alt="Bridge lab logo url">
+
+  <input type="text" [(ngModel)]="username" placeholder="Enter your UserName">
 </div>
 
 <router-outlet></router-outlet>
