--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,3 +13,9 @@ input{
     margin: 0 auto;
     width: 15%;
 }
+.Error-output{
+    margin-left: 10px;
+    font-size: 12px;
+    font-style: italic;
+    color:red;
+}
